<resources>
    <string name="app_name">TT-Key</string>

    <string name="menu_title_one">功能</string>
    <string name="menu_title_two">更多信息</string>

    <string name="menu_item_send">反馈</string>
    <string name="pref_header_data_sync">数据 &amp; 同步</string>
    <string name="pref_header_notifications">通知</string>
    <string name="pref_header_general">常规设置</string>
    <string name="menu_item_backups">备份</string>
    <string name="menu_item_reduction">还原</string>
    <string name="menu_item_log">日志</string>
    <string name="action_share">分享应用</string>
    <string name="menu_item_guide">使用帮助</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="setting_about">关于TTkey</string>

    <string name="setting_theme">个性化</string>
    <string name="setting_theme_title">主题</string>
    <string name="setting_theme_bg_one">修改背景图片</string>
    <string name="setting_theme_bg">背景图片</string>
    <string name="setting_summary_theme">修改主题</string>
    <string name="setting_theme_color">标题栏背景色</string>
    <string name="setting_theme_fint_color">字体颜色</string>
    <string-array name="setting_theme_color_ra">
        <item>蓝色</item>
        <item>红色</item>
        <item>青色</item>
        <item>水色</item>
        <item>上色</item>
        <item>换色</item>
    </string-array>
    <string-array name="setting_theme_color_ra_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string name="title_activity_settings">设置</string>
    <string name="setting_security">安全</string>
    <string name="setting_summary_security">修改登录方式和密码</string>
    <string name="menu_item_about">关于</string>
    <string name="settring_version">版本号</string>
    <string name="settring_version_sum">版本:1.0.0.3.27.5.2016</string>

    <string name="settring_security_one">打开TTkey方式</string>
    <string name="settring_security_two">更改登录密码</string>
    <string name="action_course">查看帮助</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">保存</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <!-- Strings related to Settings -->
    <string name="pref_header_security">安全</string>
    <!-- Example General settings -->


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">请输入。。</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->


    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!-- &**************************************-->
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>

    <!-- &**************************************-->
    <string name="menu_item_syc">导出数据</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_information_scrolling">InformationScrollingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_scrolling">InfoScrollingActivity</string>
    <string name="title_activity_colcr">ColcrActivity</string>

</resources>
